syntax = "proto3";

import "google/protobuf/empty.proto";

package service;

option go_package = "api/grpc";

// Auth

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string error = 2;
}

// Note

message Note {
  string title = 1;
  string description = 2;
  string value = 3;
  bytes raw_value = 4;
}

message AddNoteRequest {
  Note note = 1;
}

message AddNoteResponse {
  string error = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
  string error = 2;
}

message GetNotesResponse {
  repeated Note notes = 1;
  string error = 2;
}

// Card

message Card {
  string title = 1;
  string description = 2;
  string number = 3;
  string holder = 4;
  string cvc = 5;
  string expiry = 6;
}

message AddCardRequest {
  Card card = 1;
}

message AddCardResponse {
  string error = 1;
}

message GetCardRequest {
  string id = 1;
}

message GetCardResponse {
  Card card = 1;
  string error = 2;
}

message GetCardsResponse {
  repeated Card cards = 1;
  string error = 2;
}

// Credentials

message Credentials {
  string title = 1;
  string description = 2;
  string username = 3;
  string password = 4;
}

message AddCredentialsRequest {
  Credentials credentials = 1;
}

message AddCredentialsResponse {
  string error = 1;
}

message GetCredentialsRequest {
  string id = 1;
}

message GetCredentialsResponse {
  Credentials credentials = 1;
  string error = 2;
}

message GetAllCredentialsResponse {
  repeated Credentials credentials = 1;
  string error = 2;
}


service Keeper {
  rpc SignUp(AuthRequest) returns (AuthResponse);
  rpc SignIn(AuthRequest) returns (AuthResponse);

  rpc AddNote(AddNoteRequest) returns (AddNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc GetTextNotes(google.protobuf.Empty) returns (GetNotesResponse);
  rpc GetRawNotes(google.protobuf.Empty) returns (GetNotesResponse);

  rpc AddCard(AddCardRequest) returns (AddCardResponse);
  rpc GetCard(GetCardRequest) returns (GetCardResponse);
  rpc GetCards(google.protobuf.Empty) returns (GetCardsResponse);

  rpc AddCredentials(AddCredentialsRequest) returns (AddCredentialsResponse);
  rpc GetCredentials(GetCredentialsRequest) returns (GetCredentialsResponse);
  rpc GetAllCredentials(google.protobuf.Empty) returns (GetAllCredentialsResponse);
}
